# Multiscore-Rag-system

backend/: .env.example  .gitignore  RAG_README.md  README.md  clear_vector_db.py  debug_qdrant.py  debug_qdrant_sync.py  main.py  migrate_index.py  pyproject.toml
backend/api/: __init__.py  admin_endpoints.py  auth_endpoint.py  chat_endpoints.py  deps.py  ingestion_endpoints.py  routes.py
backend/core/: __init__.py  config.py  logging.py  security.py
backend/db/: __init__.py  mongodb.py  vector_db.py
backend/docs/: CHALLENGES_FACED.md  FUTURE_TASKS.md  RAG_README.md  README.md
backend/generation/: answer_generator.py  llm.py  prompt_templates.py
backend/ingestion/: chunking.py  embedder.py  github_loader.py  job_tracker.py  pdf_loader.py  pipeline.py  web_loader.py
backend/ingestion/loaders/: __init__.py  github_loader.py  pdf_loader.py  web_loader.py
backend/logs/: app.log.2026-03-18  app.log.2026-03-19  app.log.2026-03-20  app.log.2026-03-21
backend/retrieval/: hybrid_search.py  query_rewriter.py  reranker.py  retriever_manager.py  vector_search.py
backend/schemas/: __init__.py  chat.py  ingestion.py  user.py
backend/uploads/dfef0480-d006-4e7f-9e11-26ba48de4dbe/f947eb82-b4c8-41c1-9518-c9ceff15677d/: page.txt
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: admin.js  auth.js  chat.js  client.js  ingestion.js
frontend/src/constants/: app.js
frontend/src/hooks/: useAuth.js
frontend/src/pages/: AdminPage.jsx  ChatPage.jsx  ChatsPage.jsx  IngestPage.jsx  NotFoundPage.jsx  (+1 more)
(+24 files in other folders)
